--- a/ted_teaser_5.7/type_writter.css
+++ b/ted_teaser_5.7/type_writter.css
@@ -5,7 +5,7 @@ body,
 h1 {
   margin: auto;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Helvetica", sans-serif;
 
   font-size: 2.2vw;
 }
