--- a/eyepart/css/watch.css
+++ b/eyepart/css/watch.css
@@ -1,9 +1,10 @@
 html, body{
     background: black;
+    /* background: linear-gradient(#200122, #6f0000); */
 }
 
 .vdo-border:hover {
-    background: #e62b1e;
+    background: linear-gradient(45deg, #200122, #6f0000);
     transform: scale(1.2);
 }
 .vdo-border {
@@ -32,6 +33,8 @@ html, body{
 }
 .yt-thumbnail img {
     padding-bottom: 1rem;
+    max-width: 200%;
+    height: auto;
 }
 
 .ytbuild{
@@ -89,6 +92,10 @@ html, body{
 .secTitle h1 {
     font-size: 60px;
     color: white;
+    /* font-weight: 400;
+    background: -webkit-linear-gradient(#200122, #6f0000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
     text-align: center;
 }
 
