--- a/i_love_nathan/counter.css
+++ b/i_love_nathan/counter.css
@@ -74,3 +74,16 @@ body {
   display: table;
   color: red;
 }
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    width: 100%;
+    margin: 30px auto;
+  }
+  .counter {
+    background-color: #ffffff;
+    padding: 20px 0;
+    border-radius: 5px;
+    width: 100%;
+  }
+}
