--- a/nathunpart/css/style.css
+++ b/nathunpart/css/style.css
@@ -106,21 +106,61 @@ nav a:hover {
     text-align: center;
 }
 
-.box:hover {
+.box:hover{
     background-color: rgba(255, 0, 0 ,0.8);
 }
 
-.handshake {
-    margin-top: 50px;
+/* on box hover */
+.box:hover > .handshake {
+    margin-top: 10px;
+    margin-bottom: 0px;
     width: 256px;
     height: 256px;
 }
 
+.box:hover > .raise-hand {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    width: 180px;
+    height: 180px;
+}
+
+.box:hover > .describe {
+    visibility: visible;
+    color: white;
+}
+
+/* end */
+
+.topic {
+    color: rgba(255, 255, 255, 1);
+    margin-top: 40px;
+
+}
+
+.handshake {
+    margin-top: 60px;
+    margin-bottom: 130px;
+    width: 330px;
+    height: 330px;
+    transition: margin-top 1s,width 1s,height 1s;
+}
+
 .raise-hand {
     margin-top: 75px;
-    width: 200px;
-    height: 200px;
+    margin-bottom: 180px;
+    width: 260px;
+    height: 260px;
+    transition: margin-top 1s,width 1s,height 1s;
 }
+
+.describe {
+    color: rgba(255,255,255,0);
+    visibility: hidden;
+    transition: visibility 2s, color 0.5s;
+}
+
+
 
 
 
