--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -41,12 +41,14 @@ header ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding:5px 0;
 }
 
 header ul li a{
     color: var(--sec);
     text-transform: uppercase;
-    font-size: 0.5rem;
+    font-size: 0.8rem;
+    font-weight: 900;
 }
 
 header ul li a:hover{
@@ -60,7 +62,7 @@ header ul li a:hover{
         bottom: initial;
         top:0;
         height: auto;
-        padding: 0 10%;
+        padding: 1% 10%;
         display: flex;
         flex-flow: row;
         justify-content: space-between;
@@ -77,7 +79,6 @@ header ul li a:hover{
     }
 
     header ul li a{
-        font-weight: 900;
         font-size: 1rem;
     }
 }
