--- a/public/css/participate.css
+++ b/public/css/participate.css
@@ -56,12 +56,19 @@ html, body {
     height: 180px;
 }
 
-.box:hover>.describe {
+.box:hover>.describe{
+    visibility: visible;
+    color: white;
+}
+
+
+.box:hover>.describe>.facebook {
     visibility: visible;
     color: white;
 }
 
 /* end */
+
 
 .topic {
     color: rgba(255, 255, 255, 1);
@@ -88,6 +95,17 @@ html, body {
     color: rgba(255, 255, 255, 0);
     visibility: hidden;
     transition: visibility 2s, color 0.5s;
+    font-size: 18px;
+    margin: 20px;
+}
+
+.facebook {
+    color: rgba(255, 255, 255, 0);
+    visibility: hidden;
+    transition: visibility 2s, color 0.5s;
+    font-size: 18px;
+    font-weight: 900;
+    padding-left: 5px;
 }
 
 /* for responsive */
@@ -133,14 +151,14 @@ html, body {
     }
     /* on box hover */
     .box:hover>.handshake {
-        width: 120px;
-        height: 120px;
-        margin-top: 20px; 
+        width: 110px;
+        height: 110px;
+        margin-top: 10px; 
     }
     .box:hover>.raise-hand {
-        width: 120px;
-        height: 120px;
-        margin-top: 20px; 
+        width: 100px;
+        height: 100px;
+        margin-top: 10px; 
         
     }
     .box:hover>.describe {
