--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,66 @@
+body{
+    background: #000;
+}
+section.black{
+    margin-top : 3rem;
+    /* height: 100vh; */
+    background: #000;
+    /* background-image: url('https://images.pexels.com/photos/325044/pexels-photo-325044.jpeg'); */
+    background-size: cover;
+}
+section.white{
+    margin: 0 ;
+    margin-top: 0 ;
+    height: 200vh;
+    background:black;
+    text-align: center ;
+}
+video {
+    max-width: 100%;
+    height: auto;
+  }
+/* img {
+    max-width: 100%;
+    height: auto;
+} */
+/* .front {
+    margin-top : 8rem ; 
+    filter:opacity(100%);
+    top : 15%  ;
+    align-content: center ;
+    left : 25% ;
+    height: auto ;
+    width: 50% ;
+    float: left ;
+    position: absolute; 
+} */
+
+.front {
+    /* margin-top : 8em ;  */
+    filter:opacity(100%);
+    top : 10vh  ;
+    align-content: center ;
+    left : 0% ;
+    /* height: auto ; */
+    width: 190vh ;
+    float: left ;
+    position: absolute; 
+}
+
+
+.back {
+    /* filter:opacity(100%); */
+    /* padding-top: 3% ; */
+    height: 85vh;
+    width: 180vh;
+    /* border:5px solid blue; */
+}
+
+
 .container{
     text-align: center ;
     position: absolute ;
-    top : 140% ;
+    top : 120% ;
     left: 10%;
     width : 100%;
 }
@@ -14,34 +73,77 @@
     color : white;
     display: block ;
 }
+
+
 .text1 {
+    /* background: -webkit-linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
     width: 100% ;
     font-size: 80px ;
-    font-weight: 500 ;
+    font-weight: 100 ;
     letter-spacing: 2px ;
-    
-
+    margin-bottom: 0px ;
+    padding: 0px ;
+    padding-bottom : 0px;
+    animation: text 3s 1 ;
 }
-
+/* 
 .text1.animateMe{
     animation: text 3s 1 ;
+
+} */
+
+.text2 {
+    width: 100% ;
+    font-size: 80px ;
+    font-weight: 100 ;
+    letter-spacing: 2px ;
+    margin-top : 25vh ;
+    margin-bottom: 0 ;
+    padding-bottom : 0px;
 
 }
 
 @keyframes text {
     0%{
         color:black ;
-        margin-bottom: -20px ;
+        margin-bottom: -10px ;
     }
     50%{
         color:#e62b1e  ;
-        letter-spacing: 20px ;
-        margin-bottom: -20px ;
+        letter-spacing: 10px ;
+        margin-bottom: -10px ;
     }
     85%{
         color: white ;
         letter-spacing: 2px ;
-        margin-bottom: -20px ;
+        margin-bottom: -10px ;
+
+    }
+}
+
+.left_col {
+    font-family: Helvetica, sans-serif ;
+    margin-top : 5vh ;
+    font-size: 4rem ;
+    color: #e62b1e ;
+}
+
+@keyframes text {
+    0%{
+        color:black ;
+        margin-bottom: -10px ;
+    }
+    50%{
+        color:#e62b1e  ;
+        letter-spacing: 10px ;
+        margin-bottom: -10px ;
+    }
+    85%{
+        color: white ;
+        letter-spacing: 2px ;
+        margin-bottom: -10px ;
 
     }
 }
@@ -54,3 +156,16 @@
     font-family: 'Kanit', sans-serif;
     font-size: 20px;
 }
+
+
+#TEDxKU {
+    color: rgb(158, 158, 158) ;
+    padding: 3rem;
+    margin-bottom: 20vh ;
+}
+#TEDxKU p{
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
+}
+
+
