--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,7 +11,7 @@ section.black{
 section.white{
     margin: 0 ;
     margin-top: 0 ;
-    height: 200vh;
+    /* height: 200vh; */
     background:black;
     text-align: center ;
 }
@@ -19,21 +19,25 @@ video {
     max-width: 100%;
     height: auto;
   }
-/* img {
-    max-width: 100%;
-    height: auto;
-} */
-/* .front {
-    margin-top : 8rem ; 
-    filter:opacity(100%);
-    top : 15%  ;
-    align-content: center ;
-    left : 25% ;
-    height: auto ;
-    width: 50% ;
-    float: left ;
-    position: absolute; 
-} */
+
+  @media screen and  (max-width: 700 px) {
+    
+    .front {
+        filter:opacity(100%);
+        align-content: center ;
+        left : 0% ;
+        height: auto ;
+        width: 50% ;
+        float: left ;
+        position: absolute; 
+    }
+
+    .back {
+        height:auto;
+        width: 50%;
+    }
+
+  }
 
 .front {
     /* margin-top : 8em ;  */
@@ -42,7 +46,7 @@ video {
     align-content: center ;
     left : 0% ;
     /* height: auto ; */
-    width: 190vh ;
+    width: 180vh ;
     float: left ;
     position: absolute; 
 }
@@ -51,8 +55,8 @@ video {
 .back {
     /* filter:opacity(100%); */
     /* padding-top: 3% ; */
-    height: 85vh;
-    width: 180vh;
+    height:auto;
+    width: 158vh;
     /* border:5px solid blue; */
 }
 
@@ -124,9 +128,12 @@ video {
 }
 
 .left_col {
+    border-style: solid;
+    border-width: 5px;
+    border-color: #e62b1e ;
     font-family: Helvetica, sans-serif ;
     margin-top : 5vh ;
-    font-size: 4rem ;
+    font-size: 3rem ;
     color: #e62b1e ;
 }
 
@@ -148,9 +155,16 @@ video {
     }
 }
 
+#iws {
+    border-style: solid ;
+    border : red ;
+}
+
 #whatistedx {
-    color: rgb(158, 158, 158) ;
-    padding: 3rem;
+    border-radius: 2em ;
+    background: #e62b1e8c ;
+    color: rgb(255, 255, 255) ;
+    padding: 4em;
 }
 #whatistedx p{
     font-family: 'Kanit', sans-serif;
@@ -159,7 +173,9 @@ video {
 
 
 #TEDxKU {
-    color: rgb(158, 158, 158) ;
+    border-radius: 2em ;
+    background: #e62b1e8c ;
+    color: rgb(255, 255, 255) ;
     padding: 3rem;
     margin-bottom: 20vh ;
 }
