--- a/public/css/partner.css
+++ b/public/css/partner.css
@@ -8,13 +8,21 @@ html, body {
     margin-top: 30px;
 }
 
+.sponser-year{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    padding-top: 10%;
+}
+
 .sponser {
-width: 20%;
-height: 20%;
+    width: 30%;
+    height: 30%;
+    padding: 2%;
 }
 
 .spacing {
-    height: 140px;
+    height: 100px;
 }
 
 .secTitle h1 {
@@ -51,4 +59,9 @@ hr {
     100% {
         width: 20%;
     }
+}
+
+.sponser-dd {
+    width: 100%;
+    background-color: black;
 }
