--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,175 +1,153 @@
-@import url('https://fonts.googleapis.com/css?family=Kanit&display=swap');
-
-body{
-    background: white;
-}
-
-section.black {
-    background: rgb(255, 255, 255) ;
+:root{
     margin: 0px ;
-}
-section.white {
-    position: relative;
-    width: 100% ;
-    
-}
-
-.back {
-    /* filter: grayscale(100%) ; */
-    filter: brightness(150%);
-    background : rgba(255, 255, 255, 0.452) ;
-    position: absolute;
-    width : 100% ;
-    height : auto ; 
-    z-index: 1 ;
 }
 
 .front {
+    align-content: center ;
+    width: 100% ;
+    height: auto ;
+    float: left ;
     position: absolute;
-    
-    width : 100% ;
-    height : auto ;
-    z-index: 3 ;
-    animation: jackInTheBox 3s  1 ;
- 
-} 
+    top :0px;
+    left :0px ;
+    right: 0px ;
 
-@keyframes jackInTheBox {
-    from {
-      opacity: 0;
-      -webkit-transform: scale(0.1) rotate(30deg);
-      transform: scale(0.1) rotate(30deg);
-      -webkit-transform-origin: center bottom;
-      transform-origin: center bottom;
-    }
-  
-    50% {
-      -webkit-transform: rotate(-10deg);
-      transform: rotate(-10deg);
-    }
-  
-    70% {
-      -webkit-transform: rotate(3deg);
-      transform: rotate(3deg);
-    }
-  
-    to {
-      opacity: 1;
-      -webkit-transform: scale(1);
-      transform: scale(1);
-    }
-  }
+}
+.back {
+    width : 90% ;
+    height: auto ;
+}
 
 .container{
-    position: absolute;
-    top : 900px ;
-    left :0px ;
-    right : 0px;
-    bottom : 0px ;
-    z-index: 4;
     text-align: center ;
     width : 100%;
+    height : auto ;
 }
 
+#alive {
+    margin-top : 0px ;
+    margin-left : 5rem;
+    margin-right : 5rem;
+    padding : 2rem;
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
+
+}
 
 .container span{
-    top: 20% ;
     font-family: 'Kanit', sans-serif;
-    padding-bottom: 1em ;
+    /* padding-bottom: 3rem ; */
     text-align: center ;
-    color : black ;
+    color : rgb(255, 4, 4);
+    font-weight: bold;
     display: block ;
+}
+.flip-card {
+    margin-top : 2rem;
+    margin-bottom : 4rem ;
+    background-color: transparent;
+    height: 50vh ;
+    border: 1px solid #ffffff;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    background-color: white;
+    border : 5px solid red ;
+    color: rgb(255, 255, 255);
+    border-radius: 2rem ;
+}
+
+/* Style the back side */
+.flip-card-back {
+    border-radius: 2rem ;
+    background-color: red;
+    border : 5px solid red ;
+    color: rgb(255, 255, 255);
+    transform: rotateY(180deg);
 }
 
 
-.text1 {
-    
-    /* background: linear-gradient(90deg, rgba(237,2,141,1) 30%, rgba(253,241,0,1) 40%, rgba(0,172,238,1) 60%) ;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
-    color: black ;
-    width: auto ;
+.text1{
+    padding : 7rem;
+    text-align: center ;
+    width: 100% ;
+    font-size: 4rem ;
+    font-weight: 500 ;
+    font-weight: 100 ;
+    letter-spacing: 2px ;
+    margin-bottom: 0px ;
+
+} 
+
+.text2 {
+    padding: 9rem;
+    text-align: center ;
+    width: 100% ;
     font-size: 80px ;
+    font-weight: 500 ;
     font-weight: 100 ;
     letter-spacing: 2px ;
     margin-bottom: 0px ;
     padding: 0px ;
     padding-bottom : 0px;
-    animation: text 3s 1 ;
-}
+    
 
-.text2 {
-    /* background: linear-gradient(90deg, rgba(237,2,141,1) 30%, rgba(253,241,0,1) 40%, rgba(0,172,238,1) 60%) ;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
-    color: black ;
-    width: auto ;
-    font-size: 80px ;
-    font-weight: 100 ;
-    letter-spacing: 2px ;
-    margin-top : 15vh ;
-    margin-bottom: 0 ;
-    padding-bottom : 0px;
+} 
 
-}
-/* 
-@keyframes text {
-    0%{
-        color:black ;
-        margin-bottom: -10px ;
-    }
-    50%{
-        color:#e62b1e  ;
-        letter-spacing: 10px ;
-        margin-bottom: -10px ;
-    }
-    85%{
-        color: white ;
-        letter-spacing: 2px ;
-        margin-bottom: -10px ;
+#alive {
+    margin-top : 0px ;
+    margin-left : 5rem;
+    margin-right : 5rem;
+    padding : 2rem;
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
 
-    }
-} */
-
-/* .left_col {
-    border-style: solid;
-    border-width: 5px;
-    border-color: #e62b1e ;
-    font-family: Helvetica, sans-serif ;
-    margin-top : 5vh ;
-    font-size: 3rem ;
-    color: #e62b1e ;
-} */
-
-#iws {
-    border-style: solid ;
-    border : red ;
-}
-
-#whatistedx {
-    border-radius: 2em ;
-    background: red ;
-    color: rgb(255, 255, 255) ;
-    padding: 4em;
 }
 #whatistedx p{
+    margin : 3rem;
+    /* margin-left : 7rem ;
+    margin-right : 7rem ;
+    padding : 2rem;
+    background-color: red;
+    border-radius : 2rem; */
+    color: white;
     font-family: 'Kanit', sans-serif;
     font-size: 20px;
-    
-}
+} 
 
-
-#TEDxKU {
-    border-radius: 2em ;
-    background: #e62b1e ;
-    color: rgb(255, 255, 255) ;
-    padding: 3rem;
-    margin-bottom: 20vh ;
-}
 #TEDxKU p{
+     margin : 6rem;
+    /*margin-left : 7rem ;
+    margin-right : 7rem ;
+    padding : 2rem;
+    background-color: red;
+    border-radius : 2rem; */
+    color: white;
     font-family: 'Kanit', sans-serif;
     font-size: 20px;
-}
-
-
-
+}  
