--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -44,17 +44,6 @@ header ul {
     padding:5px 0;
 }
 
-
-header ul li{
-    padding: 0 calc(100vw/42);
-    padding-left: calc(100vw/21);
-    border-left: 3px solid var(--ted-red);
-}
-
-header ul li:first-child{
-    border: none;
-}
-
 header ul li a{
     color: var(--sec);
     text-transform: uppercase;
@@ -66,6 +55,11 @@ header ul li a:hover{
     text-decoration: none;
     color: var(--ted-red);
     transition: color 0.6s;
+}
+
+header ul li.divider {
+    color: var(--ted-red);
+    font-weight: 700;
 }
 
 .bot-push{
@@ -96,8 +90,8 @@ header ul li a:hover{
         width: 40vw;
     }
 
-    header ul li{
-        border:none;
+    header ul li.divider{
+        display: none;
     }
 
     header ul li a{
